--- a/src/Styles/Login.module.css
+++ b/src/Styles/Login.module.css
@@ -56,3 +56,23 @@
 .lowtext {
     color: #565656;
 }
+.inputGrid {
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  
+  .inputColumn {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 250px; /* Define uma largura padrão para as colunas */
+  }
+  
+  .lowcontainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
