--- a/src/Styles/App.module.css
+++ b/src/Styles/App.module.css
@@ -8,4 +8,14 @@
     align-items: center;
     justify-content: center;
     align-self: center;
+    gap: 2rem;
+}
+.lowtext {
+    font-size: 22px;
+    color: #292E33;
+}
+.boxcard {
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 5rem;
 }
