--- a/src/Styles/EditPerfil.module.css
+++ b/src/Styles/EditPerfil.module.css
@@ -1,61 +1,56 @@
+/* EditPerfil.module.css */
+
 .bg {
-    background-color: #f5f5f5;
+    background-color: #f4f6f8;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-}
-
-.header {
-    padding: 20px;
-    background-color: #ffffff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.container {
-    flex: 1;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.highbox {
-    display: flex;
     align-items: center;
     justify-content: center;
+  }
+  
+  .header {
+    width: 100%;
     margin-bottom: 20px;
-}
-
-.text {
+  }
+  
+  .container {
+    max-width: 600px;
+    width: 100%;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    margin-bottom: 50px;
+    margin-top: 20px;
+  }
+  
+  .highbox {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  
+  .text {
     font-size: 24px;
     font-weight: bold;
-    margin-right: 10px;
-}
-
-.hand {
-    font-size: 30px;
-    color: #235BD5; /* Cor do ícone */
-}
-
-.lowcontainer {
+    color: #333;
+  }
+  
+  .hand {
+    color: #1E9CFA;
+    font-size: 36px;
+  }
+  
+  .lowcontainer {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    max-width: 450px; /* Largura máxima */
-}
-
-.btndiv {
+  }
+  
+  .btndiv {
+    margin-top: 20px;
     display: flex;
     justify-content: center;
-    margin-top: 20px;
-}
-
-/* Estilo para as caixas de entrada (TextField) */
-.MuiTextField-root {
-    margin-bottom: 20px; /* Espaçamento entre os campos */
-}
-
-/* Estilo para o Alert */
-.MuiAlert-root {
-    margin-top: 20px; /* Espaçamento entre o alerta e outros componentes */
-}
+  }
+  
