--- a/src/Styles/ChatForm.module.css
+++ b/src/Styles/ChatForm.module.css
@@ -4,77 +4,73 @@
     right: 20px;
     z-index: 1000;
 }
-  
+
 .chatIcon {
     background-color: #3f51b5;
     color: white;
 }
-  
-.dialog {
-    position: absolute;
-}
-  
+
 .dialogPaper {
-    position: fixed;
+    position: fixed; /* Mantenha a posição fixa */
     bottom: 80px; /* Para garantir que o popup apareça acima do ícone */
     right: 20px;
     width: 400px; /* Aumenta a largura do chat */
 }
-  
+
 .dialogTitle {
     background-color: #3f51b5;
     color: white;
     text-align: center;
 }
-  
+
 .messageList {
     max-height: 300px;
     overflow-y: auto;
     margin-bottom: 10px;
 }
-  
+
 .form {
     display: flex;
     align-items: center;
 }
-  
+
 .textField {
     flex-grow: 1;
 }
-  
+
 .sendButton {
     margin-left: 10px;
 }
-  
+
 .userMessage {
     text-align: right;
     color: blue;
 }
-  
+
 .assisthenaMessage {
     text-align: left;
     color: green;
 }
-  
+
 .messageIcon {
     width: 30px; 
     height: 30px; 
-    margin-left: 8px; /* Para ícone da Assisthena à direita */
+    margin-left: 8px; 
     margin-right: 8px; 
     vertical-align: middle; 
-    border-radius: 50%; /* Torna o ícone redondo */
+    border-radius: 50%;
 }
 
 /* Estilos para o Popup de Termos de Uso */
 .termsDialog {
-    z-index: 1500; /* Certifique-se de que o popup esteja acima de outros elementos */
+    z-index: 1500;
 }
 
 .termsDialog .MuiDialog-paper {
-    position: fixed; /* Para centralizar no meio da tela */
+    position: fixed; 
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); /* Centraliza */
-    width: 400px; /* Ajuste a largura conforme necessário */
-    max-width: 90%; /* Para que fique responsivo em telas menores */
+    transform: translate(-50%, -50%);
+    width: 400px; 
+    max-width: 90%; 
 }
