--- a/src/Styles/EditPerfil.module.css
+++ b/src/Styles/EditPerfil.module.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url(../Photos/Cadastro-back.png);
   }
   
   .header {
