--- a/src/Styles/ChatForm.module.css
+++ b/src/Styles/ChatForm.module.css
@@ -3,11 +3,14 @@
     bottom: 20px;
     right: 20px;
     z-index: 1000;
+    background-color: #3f51b5;
+    border-radius: 30px;
 }
 
 .chatIcon {
-    background-color: #3f51b5;
     color: white;
+    width: 4rem;
+    height: 4rem;
 }
 
 .dialogPaper {
@@ -73,4 +76,8 @@
     transform: translate(-50%, -50%);
     width: 400px; 
     max-width: 90%; 
+}
+.chat {
+    color: white;
+    font-size: 2rem;
 }
