Alterações no card

--- a/src/Styles/CardsAcesso.module.css
+++ b/src/Styles/CardsAcesso.module.css
@@ -8,11 +8,13 @@
     align-items: center;
 }
 .texto1 {
-    font-size: 2rem;
-    font-weight: 700;
+    font-size: 1.8rem;
+    font-weight: 600;
+    color: #333;
 }
-.high-box {
+.high {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 0.5rem;
+    margin-left: 1rem;
 }
