feat: add security function for face recognition

--- a/src/Styles/ChatForm.module.css
+++ b/src/Styles/ChatForm.module.css
@@ -53,6 +53,7 @@
 
 .assisthenaMessage {
     margin-top: 10px;
+    margin-bottom: 10px;
     text-align: left;
     background-color: rgba(243, 243, 243, 0.5);
 
