--- a/src/Styles/ChatForm.module.css
+++ b/src/Styles/ChatForm.module.css
@@ -86,3 +86,10 @@
     color: white;
     font-size: 2rem;
 }
+
+.closeButton {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    color: inherit;
+}
